apps/traefik-conf/traefik-network.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-traefik
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app: kromgo
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: unifi
            io.kubernetes.pod.namespace: unifi
      toPorts:
        - ports:
            - port: "8843"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: unifi-landing
            io.kubernetes.pod.namespace: unifi
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
